--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="public/style.css">
     <title>Frontend Mentor | Blog preview card</title>
   </head>
   <body>
     <div class="container">
       <img
-        src="/assets/images/illustration-article.svg"
+        src="assets/images/illustration-article.svg"
         alt="illustration-article"
       />
       <p class="status">Learning</p>
@@ -28,7 +28,7 @@
         content, and presentation.
       </p>
       <strong
-        ><img src="/assets/images/image-avatar.webp" alt="avatar" />Greg Hooper</strong
+        ><img src="assets/images/image-avatar.webp" alt="avatar" />Greg Hooper</strong
       >
     </div>
     <div class="attribution">
